--- a/back-end/composer.json
+++ b/back-end/composer.json
@@ -5,14 +5,20 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "friendsofsymfony/user-bundle": "~2.0",
+        "sensio/framework-extra-bundle": "^5.2",
         "symfony/console": "^4.1",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.1",
         "symfony/lts": "^4@dev",
+        "symfony/orm-pack": "^1.0",
+        "symfony/security-bundle": "^4.1",
+        "symfony/swiftmailer-bundle": "^3.2",
         "symfony/yaml": "^4.1"
     },
     "require-dev": {
-        "symfony/dotenv": "^4.1"
+        "symfony/dotenv": "^4.1",
+        "symfony/maker-bundle": "^1.6"
     },
     "config": {
         "preferred-install": {
@@ -43,12 +49,10 @@
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
-            "@auto-scripts",
-            "Lemberg\\Draft\\Environment\\Configurer::setUp"
+            "@auto-scripts"
         ],
         "post-update-cmd": [
-            "@auto-scripts",
-            "Lemberg\\Draft\\Environment\\Configurer::setUp"
+            "@auto-scripts"
         ]
     },
     "conflict": {
